# software-renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: types.hpp  window.hpp
include/math/: mat.hpp  transform.hpp  vec.hpp  vec.tpp  vec2_type.hpp  vec3_type.hpp  vec4_type.hpp  vec_type.hpp
include/math/impl/: mat_type.hpp  mat_type.inl  storage.hpp  storage.inl  vec2_type.hpp  vec2_type.inl  vec3_type.hpp  vec3_type.inl  vec4_type.hpp  vec4_type.inl  vec_type.hpp  vec_type.inl
sandbox/: CMakeLists.txt  main.cpp
software-renderer/: CMakeLists.txt  main.cpp
software-renderer/include/: camera.hpp  mesh.hpp  renderer.hpp  texture.hpp  thread_pool.hpp  window.hpp
software-renderer/include/math/: transform.hpp  util.hpp  vec.hpp
software-renderer/include/math/impl/: mat_type.hpp  mat_type.inl  storage.hpp  storage.inl  vec2_type.hpp  vec2_type.inl  vec3_type.hpp  vec3_type.inl  vec4_type.hpp  vec4_type.inl  vec_detail.hpp  vec_detail.inl  vec_type.hpp  vec_type.inl
software-renderer/shader/: screen.frag  screen.vert
software-renderer/src/: CMakeLists.txt  camera.cpp  mesh.cpp  renderer.cpp  texture.cpp  thread_pool.cpp  window.cpp
src/: CMakeLists.txt  window.cpp
src/math/: CMakeLists.txt  mat.inl  storage.inl  vec.cpp  vec.inl  vec2_type.inl  vec3_type.inl  vec4_type.inl  vec_type.inl
test/: CMakeLists.txt  mat_test.cpp  vec_test.cpp
